--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,87 @@
-# Windows image file caches
-Thumbs.db
+# Ignore all dotfiles...
+.*
+# except for .gitignore
+!.gitignore
+
+# Ignore Play! working directory #
+######################
+bin
+db
+eclipse
+.eclipse
+lib
+log
+logs
+precompiled
+project/project
+project/target
+target
+.target
+tmp
+test-result
+server.pid
+*.iml
+*.eml
+dist
+.cache
+# public/clients
+.history
+/out
+RUNNING_PID
+activator*
+# except for activator.properties
+!activator.properties
+
+# Ignore Play Modules within Modules #
+modules/*/modules
+
+
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+#*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store*
 ehthumbs.db
+Icon?
+Thumbs.db
 
-# Folder config file
-Desktop.ini
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# general
+*~
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# Eclipse
+.settings
+.project
+.classpath
 
-# Windows shortcuts
-*.lnk
+# IDEA
+/.idea
+/.idea_modules
 
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
